# openXray-Multiplayer

./: .gitignore  config.json  server_config.json  xrmpe_openxray_multiplayer_analysis.md
game/xray-16-dev/: .gitmodules  CMakeLists.txt  License.txt  README.md
game/xray-16-dev/.github/workflows/: cibuild.yml  labeler.yml  mirror.yml  stylecheck.yml
game/xray-16-dev/cmake/: PreProjectInit.cmake  XRay.Build.cmake  XRay.Compiler.GNULike.cmake  XRay.Compiler.MSVC.cmake  XRay.Configurations.cmake  XRay.Packaging.cmake  utils.cmake
game/xray-16-dev/misc/flatpak/: manifest.yml
game/xray-16-dev/misc/windows/: xrbinprep.cmd
game/xray-16-dev/src/: CMakeLists.txt  engine.sln  xray_build.props  xray_project_configuration.props
game/xray-16-dev/src/Common/: Compiler.inl  Config.hpp  LevelStructure.hpp  Platform.hpp  PlatformLinux.inl  object_loader.h
game/xray-16-dev/src/Layers/: CMakeLists.txt
game/xray-16-dev/src/xrAICore/: CMakeLists.txt  xrAICore.vcxproj  xrAICore.vcxproj.filters
game/xray-16-dev/src/xrCDB/: CMakeLists.txt  ISpatial.cpp  xrCDB.cpp  xrCDB.h  xrCDB.vcxproj  xrCDB_Collector.cpp  xr_area.cpp  xr_area.h
game/xray-16-dev/src/xrCore/: CMakeLists.txt  FS.cpp  FS.h  FS_internal.h  FileSystem.cpp  LocatorAPI.cpp  LocatorAPI.h  ModuleLookup.cpp  NET_utils.cpp  _color.h  _compressed_normal.cpp  _math.cpp  _vector3d.h  clsid.cpp  clsid.h  file_stream_reader.cpp  file_stream_reader.h  log.cpp  stream_reader.cpp  stream_reader.h  stream_reader_inline.h  string_concatenations.cpp  string_concatenations.h  xrCore.cpp  xrCore.h  xrCore.vcxproj  xrCore.vcxproj.filters  xrDebug.cpp  xrDebug.h  xrDebug_macros.h  xrMemory.cpp  xr_ini.cpp  xr_ini.h  xr_resource.h  xr_trims.cpp  xr_types.h  xrstring.cpp  xrstring.h
game/xray-16-dev/src/xrEngine/: CMakeLists.txt  CameraBase.cpp  CameraBase.h  CameraDefs.h  Device_imgui.cpp  Engine.cpp  Engine.h  EngineAPI.cpp  EngineAPI.h  Environment.cpp  Environment.h  Environment_editor.cpp  Environment_misc.cpp  FDemoPlay.cpp  FDemoRecord.cpp  GameFont.cpp  GameFont.h  IGameFont.hpp  IGame_Level.cpp  IGame_Level.h  IGame_Persistent.cpp  IGame_Persistent.h  IInputReceiver.h  IRenderable.cpp  IRenderable.h  ISheduled.cpp  LightAnimLibrary.cpp  ObjectAnimator.h  Rain.cpp  Rain.h  Render.h  StatGraph.h  XR_IOConsole.h  XR_IOConsole_callback.cpp  XR_IOConsole_script.cpp  defines.cpp  device.cpp  device.h  editor_base.cpp  editor_base.h  (+23 more)
game/xray-16-dev/src/xrGame/: AI_PhraseDialogManager.cpp  Actor.cpp  Actor.h  ActorAnimation.cpp  ActorCondition.cpp  ActorCondition.h  ActorCondition_script.cpp  ActorHelmet.cpp  ActorHelmet.h  ActorInput.cpp  ActorVehicle.cpp  Actor_Network.cpp  Artefact.cpp  Artefact.h  BastArtifact.cpp  BlackGraviArtifact.cpp  BoneProtections.cpp  BoneProtections.h  BottleItem.cpp  CMakeLists.txt  CameraFirstEye.cpp  CameraFirstEye.h  CameraLook.cpp  CameraLook.h  Car.cpp  Car.h  CarDamageParticles.cpp  CarExhaust.cpp  CarScript.cpp  CharacterPhysicsSupport.cpp  ContextMenu.cpp  CustomMonster.cpp  CustomMonster.h  CustomMonster_inline.h  CustomOutfit.cpp  CustomOutfit.h  CustomOutfit_script.cpp  CustomRocket.cpp  CustomZone.cpp  DemoInfo.cpp  (+391 more)
game/xray-16-dev/src/xrGameSpy/: CMakeLists.txt  stdafx.h  xrGameSpy.h  xrGameSpy.vcxproj
game/xray-16-dev/src/xrMPNet/: AIAuthorityController.cpp  AIAuthorityController.h  AssetIntegrityCheck.cpp  AssetIntegrityCheck.h  BitStream.h  ByteStream.h  CMakeLists.txt  ClientPrediction.cpp  ClientPrediction.h  CommandValidator.cpp  CommandValidator.h  EntityRegistry.cpp  EntityRegistry.h  GNSTransport.cpp  GNSTransport.h  Handshake.cpp  Handshake.h  HitValidator.cpp  HitValidator.h  ITransport.h  InputBuffer.cpp  InputBuffer.h  InputCommand.cpp  InputCommand.h  InterestManager.cpp  InterestManager.h  NetEntity.cpp  NetEntity.h  NetMessageCodec.cpp  NetMessageCodec.h  NetRpc.cpp  NetRpc.h  NetTypes.h  NpcReplication.cpp  NpcReplication.h  OpenXRayNpcReplicationAdapter.cpp  OpenXRayNpcReplicationAdapter.h  OpenXRayReplicationAdapter.cpp  OpenXRayReplicationAdapter.h  OpenXRayScriptReplicationBindings.cpp  (+29 more)
game/xray-16-dev/src/xrMaterialSystem/: CMakeLists.txt  GameMtlLib.cpp  GameMtlLib.h  GameMtlLib_Engine.cpp
game/xray-16-dev/src/xrNetServer/: CMakeLists.txt  NET_Client.cpp
game/xray-16-dev/src/xrParticles/: CMakeLists.txt
game/xray-16-dev/src/xrPhysics/: CMakeLists.txt  ExtendedGeom.h  IPHWorld.h  PHCharacter.h  PHCommander.cpp  PHCommander.h  PHElement.h  PHJoint.cpp  PHJoint.h  PHScriptCall.cpp  PHScriptCall.h  PHShell.h  PHSimpleCalls.cpp  PHSimpleCalls.h  PHSimpleCallsScript.cpp  PHWorld.cpp  PHWorld.h  PHWorldScript.cpp  PhysicsShell.h  PhysicsShellScript.cpp  dRayMotions.cpp  ode_include.h  xrPhysics.vcxproj  xrPhysics.vcxproj.filters
game/xray-16-dev/src/xrScriptEngine/: BindingsDumper.hpp  CMakeLists.txt  Functor.hpp  ScriptEngineScript.cpp  ScriptEngineScript.hpp  ScriptExporter.cpp  ScriptExporter.hpp  mslotutils.h  pch.hpp  script_callStack.hpp  script_callback_ex.h  script_debugger.cpp  script_debugger.hpp  script_debugger_messages.hpp  script_debugger_threads.hpp  script_engine.cpp  script_engine.hpp  script_lua_helper.hpp  script_process.cpp  script_process.hpp  script_profiler.cpp  script_profiler.hpp  script_profiler_portions.hpp  script_space.hpp  script_stack_tracker.hpp  script_thread.cpp  script_thread.hpp  xrScriptEngine.hpp  xrScriptEngine.vcxproj  xrScriptEngine.vcxproj.filters
game/xray-16-dev/src/xrServerEntities/: PHNetState.cpp  PropertiesListTypes.h  alife_human_brain.cpp  alife_human_brain.h  alife_monster_brain.cpp  alife_monster_brain.h  alife_movement_manager_holder.h  character_info.cpp  character_info.h  clsid_game.h  object_factory.h  object_factory_inline.h  object_factory_register.cpp  object_factory_script.cpp  object_factory_space.h  object_factory_spawner.cpp  object_factory_spawner.h  pch_script.h  script_fcolor_script.cpp  script_flags_script.cpp  script_fmatrix_script.cpp  script_fvector_script.cpp  script_ini_file.cpp  script_ini_file.h  script_ini_file_script.cpp  script_net_packet_script.cpp  script_properties_list_helper.cpp  (+46 more)
(+760 files in other folders)
